# Cordyceps-Final

./: .gitignore  .msg  AGENTS.md  ANALYSIS_EVAL_RANGES.md  CMakeLists.txt  DESIGN_TUNER_14PARAM.md  Detail_BTC.md  GameRules.md  PLAN.md  TONGHOP.md  TRADE-OFF_ANALYSIS.md  best_weights.cfg  commitmsg.txt  tournament_config.ini
logs_BTC/: 1.txt  11.txt  9.txt
logs_BTC/phase 1/: 10.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
logs_BTC/phase 2/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
logs_P2/: 1 (1).txt  1 (2).txt  1 (3).txt  1 (4).txt  1 (5).txt  1 (6).txt  1 (7).txt  1.txt  2 (1).txt  2 (2).txt  2 (3).txt  2 (4).txt  2 (5).txt  2 (6).txt  2 (7).txt  2 (8).txt  2.txt
scripts/: analyze_logs.py  analyze_logs2.py  analyze_sides.py  analyze_time_pct.py  check_logs.py  merge.py  tournament.py  tournament_parallel.py
src/: gen_geometry.cpp  main.cpp
src/common/: bitboard.cpp  bitboard.hpp  prefix_sum.cpp  prefix_sum.hpp  types.hpp
src/engine/: board.cpp  board.hpp  movegen.cpp  movegen.hpp  rect_table.cpp  rect_table.hpp  search.cpp  search.hpp  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  zobrist.cpp  zobrist.hpp
src/io/: protocol.cpp  protocol.hpp
submission/: best_weights.cfg  cordyceps_wsl  main  main.cpp
tests/unit/: test_benchmark.cpp  test_bitboard.cpp  test_board.cpp  test_eval.cpp  test_eval_upgrade.cpp  test_movegen.cpp  test_movegen_optimized.cpp  test_negamax.cpp  test_prefixsum.cpp  test_protocol_flow.cpp  test_protocol_init.cpp  test_recttable.cpp  test_safe_eval.cpp  test_search.cpp  test_side_weights.cpp  test_time_benchmark.cpp  test_timeman.cpp  test_tt.cpp  test_tuner_weights.cpp  test_turn2_crash.cpp  test_zobrist.cpp
tools/: tune_optuna.py  tuner_cli.cpp
